--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "author": "zuffidries <zuffidries@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "NODE_ENV=development webpack-serve ./webpack.config.js"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-serve": "^2.0.3"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1"
   }
 }
