--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
   "author": "zuffidries <zuffidries@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=development webpack-serve ./webpack.config.js"
+    "start": "NODE_ENV=development webpack-serve ./webpack.config.js",
+    "build": "yarn clean; NODE_ENV=production webpack --colors",
+    "clean": "rimraf dist",
+    "deploy": "yarn build; surge -p dist -d PROTOTYPE_NAME.surge.sh; yarn clean"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
     "autoprefixer": "^9.4.2",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^2.0.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -31,11 +35,17 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "surge": "^0.20.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-serve": "^2.0.3"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "axios": "^0.18.0",
+    "jquery": "^3.3.1",
+    "lodash.debounce": "^4.0.8",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-router": "^4.3.1"
   }
 }
